Fix out of layout problem. Force flex 0 0 auto, and set height and width manually without rounding. It solves the problem, but for some values like 51, still there is out of container problem. width, heigh become dicimal with long after comma values, so rounding do not work properly. It looks like this is the limit for flexbox.

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     /*background-color: beige;*/
     border: 2px solid black;
     margin: 10px auto;
-    width: 480px;
-    height: 480px;
+    width: 700px;
+    height: 700px;
     display: flex;
     flex-wrap: wrap;
     gap: 0;
@@ -16,7 +16,9 @@ body {
 .item {
     border: 1px solid black;
     box-sizing: border-box;
-    flex: 1;
+    flex: 0 0 auto;
+    /*with aspect ratio, we can ignore height and set only width*/
+    /*aspect-ratio: 1 / 1;*/
 }
 
 .dark {
